--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -17,10 +17,9 @@ doctrine:
         auto_mapping: true
         mappings:
             App:
-                type: attribute
                 is_bundle: false
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
+                dir: '%kernel.project_dir%/src/Domain/Model'
+                prefix: 'App\Domain\Model'
                 alias: App
         controller_resolver:
             auto_mapping: true
