--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,19 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    App\Infrastructure\Persistence\Doctrine\Repository\PostRepository:
+        arguments:
+            $entityManager: '@doctrine.orm.entity_manager'
+
+    App\Application\Handler\CreatePostHandler:
+        arguments:
+            $postRepository: '@App\Infrastructure\Persistence\Doctrine\Repository\PostRepository'
+
+    App\Application\Handler\PostQueryHandler:
+        arguments:
+            $postRepository: '@App\Infrastructure\Persistence\Doctrine\Repository\PostRepository'
+
+    App\Infrastructure\Symfony\Controller\PostController:
+        arguments:
+            $createPostHandler: '@App\Application\Handler\CreatePostHandler'
+            $postQueryHandler: '@App\Application\Handler\PostQueryHandler'
